--- a/src/scripts/views/design/index.html
+++ b/src/scripts/views/design/index.html
@@ -42,7 +42,7 @@
     </ul>
   </nav>
   <div class="design-container">
-    <iframe class="design-frame" ref="designFrame" @load="loaded" src="/design/action" scrolling="auto" frameborder="0"></iframe>
+    <iframe class="design-frame" ref="designFrame" @load="loaded" src="/design.html" scrolling="auto" frameborder="0"></iframe>
   </div>
   <module :paginationConf="paginationConf" :moduleList="moduleList" @choosePaginationEvent="choosePaginationHandle" @chooseModuleEvent="chooseModuleHandle">
   </module>
