fix页面模块获取不到站点id的bug，母版更新、新增、页面新增增加错误弹层提示

--- a/src/scripts/views/page/add/index.html
+++ b/src/scripts/views/page/add/index.html
@@ -79,4 +79,5 @@
       <button :disabled="!pageModel.url || pageModel.url.substring(0,1) != '/'" @click="createPageHandle" type="button" class="btn  btn-primary col-sm-4">保存</button>
     </div>
   </div>
+  <Dialog :message="message" :options="dialogOpts"></Dialog>
 </div>
