--- a/src/scripts/views/page/setting/index.html
+++ b/src/scripts/views/page/setting/index.html
@@ -67,4 +67,5 @@
       <button @click="updatePageHandle" type="button" class="btn  btn-primary col-sm-4">修改</button>
     </div>
   </div>
+  <Dialog :message="message" :options="dialogOpts"></Dialog>
 </div>
