--- a/src/scripts/views/master/add/index.html
+++ b/src/scripts/views/master/add/index.html
@@ -19,16 +19,15 @@
       <span style="color:red">*</span>
     </label>
     <div class="col-sm-10">
-      <quill-editor ref="myTextEditor" @change="changeMasterContent">
-
-      </quill-editor>
+      <quill-editor :options="option" ref="myTextEditor" @change="changeMasterContent"></quill-editor>
       <!--  <vue-html5-editor @change="changeMasterContent" :height="300" id="content"></vue-html5-editor> -->
     </div>
   </div>
   <div class="form-group row col-md-12">
     <label class="col-sm-2 col-form-label text-right"></label>
     <div class="col-sm-6">
-      <button @click="createMasterHandle" type="button" class="btn  btn-primary col-sm-4">保存</button>
+      <button :disabled="!masterModel.masterName || !masterModel.content" @click="createMasterHandle" type="button" class="btn  btn-primary col-sm-4">保存</button>
     </div>
   </div>
+  <Dialog :message="message" :options="dialogOpts"></Dialog>
 </div>
