--- a/src/scripts/views/master/setting/index.html
+++ b/src/scripts/views/master/setting/index.html
@@ -20,18 +20,13 @@
     </label>
     <div class="col-sm-10">
       <textarea  cols="123" rows="30" v-model="masterModel.content"></textarea>
-      <!-- <quill-editor ref="myTextEditor"
-       :content="masterModel.content" 
-       @change="changeMasterContent">
-
-      </quill-editor> -->
-      
     </div>
   </div>
   <div class="form-group row col-md-12">
     <label class="col-sm-2 col-form-label text-right"></label>
     <div class="col-sm-6">
-      <button @click="updateMasterHandle" type="button" class="btn  btn-primary col-sm-4">保存</button>
+      <button :disabled="!masterModel.masterName || !masterModel.content" @click="updateMasterHandle" type="button" class="btn  btn-primary col-sm-4">保存</button>
     </div>
   </div>
+  <Dialog :message="message" :options="dialogOpts"></Dialog>
 </div>
